--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,16 @@
 name: CI
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+        with: { python-version: "3.10" }
       - run: pip install --upgrade pip
-      - run: pip install -r requirements.txt
-      - run: pip install pytest
+      - run: pip install -r requirements.txt pytest cryptography click
       - run: pytest --maxfail=1 --disable-warnings -q
