--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install --upgrade pip
+      - run: python -m pip install --upgrade pip
       - run: pip install -r requirements.txt
       - run: pip install pytest
-      - run: pytest --maxfail=1 --disable-warnings -q
+      - run: PYTHONPATH=. pytest -m "not slow" --disable-warnings -q
