--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,11 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11, 3.12]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]  # строки!
     steps:
       - uses: actions/checkout@v3
 
@@ -24,7 +24,9 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -e .[dev]
+        run: |
+          pip install -r requirements.txt
+          pip install pytest hypothesis
 
       - name: Run tests
-        run: pytest -v
+        run: pytest -q --disable-warnings --maxfail=1
