chore: finalize packaging, CI configs, and Phase-VDF implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,48 @@
+[metadata]
+name = zilant-prime-core
+version = 0.1.0
+description = ZILANT Prime core library
+author = Your Name
+author_email = your.email@example.com
+license = MIT
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/QuantumKeyUYU/zilant-prime-core
+
+[options]
+packages = find:
+package_dir =
+    = src
+python_requires = >=3.9
+install_requires =
+    cryptography>=44.0.3
+    argon2-cffi>=23.1.0
+    click>=8.1.0
+
+[options.packages.find]
+where = src
+
+[options.extras_require]
+dev =
+    pytest>=8.0
+    hypothesis>=6.0
+    flake8>=5.0
+    bandit>=1.8
+    pre-commit>=2.20
+    isort>=5.0
+    black>=23.0
+    mypy>=0.991
+
+[tool:pytest]
+# Quiet output, disable warnings, stop on first failure
+addopts = -q --disable-warnings --maxfail=1
+# Custom markers
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+
 [flake8]
 max-line-length = 88
 extend-ignore = E203, W503
 
-[tool:pytest]
-addopts = -ra -q
+[isort]
+profile = black
