--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -9,22 +9,22 @@ on:
 jobs:
   lint-and-security:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
+      - name: Setup Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Install lint and security tools
-        run: |
-          pip install flake8 bandit
+      - name: Install dev‐tools
+        run: pip install -e .[dev]
 
-      - name: Lint with flake8
+      - name: Run flake8
         run: flake8 src --max-line-length=88 --extend-ignore=E203,W503
 
       - name: Security scan with bandit
