--- a/pre-commit-config.yaml
+++ b/pre-commit-config.yaml
@@ -1,8 +1,23 @@
 repos:
-  - repo: local
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
     hooks:
-      - id: strip-nuls
-        name: Strip NUL bytes
-        entry: python tools/strip_nuls.py
-        language: system
-        files: \.py$
+      - id: black
+        language_version: python3.10
+
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        language_version: python3.10
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 5.0.4
+    hooks:
+      - id: flake8
+        language_version: python3.10
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+      - id: bandit
