--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,41 +11,47 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # убрал 3.1 и 3.12, оставил только поддерживаемые
-        python-version: [ "3.9", "3.10", "3.11" ]
+        python-version: [3.9, 3.10, 3.11, 3.12]
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .[dev]
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
 
-      - name: Run tests
-        run: pytest -q
+    - name: Install deps
+      run: |
+        pip install -r requirements.txt
+        pip install -r dev-requirements.txt
+
+    - name: Run tests
+      run: pytest -q
 
   lint-and-security:
     runs-on: ubuntu-latest
+    needs: test
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
-      - name: Install lint tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 bandit
+    - name: Upgrade pip & install dev‐tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 bandit
 
-      - name: Run flake8
-        run: flake8 src --max-line-length=120 --extend-ignore=E203,W503
+    - name: Run flake8
+      # просто flake8 без ручных флагов — он сам возьмёт .flake8
+      run: flake8 .
 
-      - name: Run bandit
-        run: bandit -r src
+    - name: Security scan with bandit
+      run: bandit -r src
