--- a/setup.cfg
+++ b/setup.cfg
@@ -1,48 +1,37 @@
 [metadata]
-name = zilant-prime-core
+name = zilant_prime_core
 version = 0.1.0
 description = ZILANT Prime core library
 author = Your Name
-author_email = your.email@example.com
 license = MIT
-long_description = file: README.md
-long_description_content_type = text/markdown
-url = https://github.com/QuantumKeyUYU/zilant-prime-core
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: MIT License
 
 [options]
 packages = find:
 package_dir =
-    = src
-python_requires = >=3.9
+    =src
 install_requires =
-    cryptography>=44.0.3
-    argon2-cffi>=23.1.0
-    click>=8.1.0
+    cryptography>=3.4.7
+    argon2-cffi>=21.3.0
+    hypothesis>=6.0.0
 
 [options.packages.find]
 where = src
 
 [options.extras_require]
 dev =
-    pytest>=8.0
+    pytest>=7.0
     hypothesis>=6.0
     flake8>=5.0
-    bandit>=1.8
+    bandit>=1.7
     pre-commit>=2.20
     isort>=5.0
     black>=23.0
-    mypy>=0.991
 
 [tool:pytest]
-# Quiet output, disable warnings, stop on first failure
 addopts = -q --disable-warnings --maxfail=1
-# Custom markers
-markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-
-[flake8]
-max-line-length = 88
-extend-ignore = E203, W503
 
 [isort]
 profile = black
