--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,49 +9,28 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11, 3.12]
+        python-version: [3.9, 3.10, 3.11]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Upgrade pip
-      run: python -m pip install --upgrade pip
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
 
-    - name: Install deps
-      run: |
-        pip install -r requirements.txt
-        pip install -r dev-requirements.txt
+      - name: Run tests
+        run: |
+          pytest -q
 
-    - name: Run tests
-      run: pytest -q
-
-  lint-and-security:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-
-    - name: Upgrade pip & install dev‐tools
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 bandit
-
-    - name: Run flake8
-      # просто flake8 без ручных флагов — он сам возьмёт .flake8
-      run: flake8 .
-
-    - name: Security scan with bandit
-      run: bandit -r src
+      - name: Run flake8
+        run: |
+          flake8 src/ tests/
