--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,22 +2,24 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  test:
+  lint-and-test:
+    name: Lint & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
-
+        python-version: [3.8, 3.9, 3.10, 3.11]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -25,12 +27,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          # если у вас в pyproject.toml или setup.cfg есть extras "dev"
+          pip install -e .[dev] --no-deps
 
-      - name: Run tests
-        run: |
-          pytest -q
+      - name: Lint with flake8
+        run: flake8
 
-      - name: Run flake8
-        run: |
-          flake8 src/ tests/
+      - name: Run pytest
+        run: pytest -q
