--- a/.github/workflows/lint-and-security.yml
+++ b/.github/workflows/lint-and-security.yml
@@ -1,5 +1,5 @@
-# .github/workflows/ci.yml
-name: CI
+# .github/workflows/lint-and-security.yml
+name: Quality Checks
 
 on:
   push:
@@ -8,11 +8,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  lint-and-security:
     runs-on: ubuntu-24.04
-    strategy:
-      matrix:
-        python: [3.8, 3.9, 3.10, 3.11]
 
     steps:
       - uses: actions/checkout@v3
@@ -21,10 +18,10 @@ jobs:
         run: |
           sed -i '1s/^\xEF\xBB\xBF//' README.md
 
-      - name: Set up Python ${{ matrix.python }}
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python }}
+          python-version: 3.11
 
       - name: Install build tools
         run: python -m pip install --upgrade pip setuptools wheel
@@ -32,8 +29,8 @@ jobs:
       - name: Install dev deps
         run: pip install -e .[dev]
 
-      - name: Run tests
-        run: pytest -q
-
-      - name: Run linter
+      - name: Run flake8
         run: python -m flake8
+
+      - name: Security scan with bandit
+        run: python -m bandit -r src
