--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,34 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-24.04
+    name: build-and-test (${{
+      matrix.python-version
+    }})
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python: [3.8, 3.9, 3.10, 3.11]
+        python-version: [3.8, 3.9, 3.11]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Strip BOM (если есть)
         run: |
-          sed -i '1s/^\xEF\xBB\xBF//' README.md
+          # убираем BOM из всех файлов в репозитории
+          find . -type f -exec sed -i '1s/^\xEF\xBB\xBF//' {} +
 
-      - name: Set up Python ${{ matrix.python }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install build tools
         run: python -m pip install --upgrade pip setuptools wheel
