--- a/.github/workflows/lint-and-security.yml
+++ b/.github/workflows/lint-and-security.yml
@@ -1,36 +1,32 @@
-# .github/workflows/lint-and-security.yml
-name: Quality Checks
+name: lint-and-security
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
 
 jobs:
   lint-and-security:
-    runs-on: ubuntu-24.04
+    name: lint-and-security
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Strip BOM (если есть)
-        run: |
-          sed -i '1s/^\xEF\xBB\xBF//' README.md
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
-      - name: Install build tools
-        run: python -m pip install --upgrade pip setuptools wheel
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
-      - name: Install dev deps
+      - name: Install dev-tools
         run: pip install -e .[dev]
 
       - name: Run flake8
         run: python -m flake8
 
       - name: Security scan with bandit
-        run: python -m bandit -r src
+        run: bandit -r src -x tests -n 5
