--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ZILANT Prime CI
 
 on:
   push:
@@ -7,22 +7,19 @@ on:
 
 jobs:
   build-and-test:
-    name: build-and-test (${{
-      matrix.python-version
-    }})
+    name: Build & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, 3.11]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Strip BOM (если есть)
+      - name: Strip BOM (if any)
+        # удаляем BOM из всех файлов, чтобы pip и setuptools не ругались
         run: |
-          # убираем BOM из всех файлов в репозитории
           find . -type f -exec sed -i '1s/^\xEF\xBB\xBF//' {} +
 
       - name: Set up Python ${{ matrix.python-version }}
@@ -30,14 +27,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install build tools
+      - name: Upgrade pip & build tools
         run: python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install dev deps
+      - name: Install dev dependencies
         run: pip install -e .[dev]
 
       - name: Run tests
         run: pytest -q
 
-      - name: Run linter
+      - name: Lint with flake8
         run: python -m flake8
+
+      - name: Security scan with bandit
+        run: bandit -r src -x tests -n 5
