--- a/.github/workflows/lint-and-security.yml
+++ b/.github/workflows/lint-and-security.yml
@@ -1,4 +1,4 @@
-name: lint-and-security
+name: Lint & Security Checks
 
 on:
   push:
@@ -14,8 +14,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # удаляем BOM из всех файлов, чтобы pip и setuptools не ругались
-      - name: Strip BOM (если есть)
+      - name: Strip BOM (if any)
         run: |
           find . -type f -exec sed -i '1s/^\xEF\xBB\xBF//' {} +
 
@@ -30,7 +29,7 @@ jobs:
       - name: Install dev-tools
         run: pip install -e .[dev]
 
-      - name: Run flake8
+      - name: Lint with flake8
         run: python -m flake8
 
       - name: Security scan with bandit
