--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Strip BOM (if any)
-        # удаляем BOM из всех файлов, чтобы pip и setuptools не ругались
+      - name: Strip BOM (if any) via Python
         run: |
-          find . -type f -exec sed -i '1s/^\xEF\xBB\xBF//' {} +
+          python3 - <<'PYCODE'
+          from pathlib import Path
+          for f in Path('.').rglob('*'):
+              if f.is_file():
+                  data = f.read_bytes()
+                  if data.startswith(b'\xef\xbb\xbf'):
+                      f.write_bytes(data[3:])
+          PYCODE
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -31,7 +37,7 @@ jobs:
         run: python -m pip install --upgrade pip setuptools wheel
 
       - name: Install dev dependencies
-        run: pip install -e .[dev]
+        run: pip install --no-build-isolation -e .[dev]
 
       - name: Run tests
         run: pytest -q
