--- a/.github/workflows/lint-and-security.yml
+++ b/.github/workflows/lint-and-security.yml
@@ -14,9 +14,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Strip BOM (if any)
+      - name: Strip BOM (if any) via Python
         run: |
-          find . -type f -exec sed -i '1s/^\xEF\xBB\xBF//' {} +
+          python3 - <<'PYCODE'
+          from pathlib import Path
+          for f in Path('.').rglob('*'):
+              if f.is_file():
+                  data = f.read_bytes()
+                  if data.startswith(b'\xef\xbb\xbf'):
+                      f.write_bytes(data[3:])
+          PYCODE
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
@@ -27,7 +34,8 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dev-tools
-        run: pip install -e .[dev]
+        # no-build-isolation на случай, если снова будут проблемы с PEP 517
+        run: pip install --no-build-isolation -e .[dev]
 
       - name: Lint with flake8
         run: python -m flake8
