--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,66 @@
-name: Build & Test
+name: CI
 
-on: [push, pull_request]
+# Триггерим на пуши и PR в любую ветку
+on:
+  push:
+  pull_request:
 
 jobs:
   build-and-test:
+    name: Build & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
+
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.9, 3.10, 3.11]
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Upgrade pip/setuptools/wheel
-      run: python -m pip install --upgrade pip setuptools wheel
+      - name: Upgrade pip, setuptools & wheel
+        run: python -m pip install --upgrade pip setuptools wheel
 
-    - name: Install dev deps (disable build isolation)
-      run: pip install --no-build-isolation -e .[dev]
+      - name: Install dev dependencies
+        run: pip install --no-build-isolation -e .[dev]
 
-    - name: Run tests
-      run: pytest -q
+      - name: Run tests
+        run: pytest -q
 
-    - name: Lint with flake8
-      run: python -m flake8
+      - name: Lint with flake8
+        run: python -m flake8
+
+  lint-and-security:
+    name: Lint & Security Checks
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Strip BOM from pyproject.toml (if any)
+        run: python strip_bom.py
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install dev tools
+        run: pip install -e .[dev]
+
+      - name: Run flake8
+        run: python -m flake8
+
+      - name: Security scan with bandit
+        run: python -m bandit -r .
+
