--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: CI
 
-# Триггерим на пуши и PR в любую ветку
 on:
   push:
   pull_request:
@@ -10,57 +9,39 @@ jobs:
     name: Build & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
 
+    # Перебираем нужные версии Python
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.9, 3.10, 3.11]
 
     steps:
+      # 1) Клонируем репозиторий
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2) Ставим нужный Python
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
+      # 3) Обновляем pip, setuptools и wheel
       - name: Upgrade pip, setuptools & wheel
         run: python -m pip install --upgrade pip setuptools wheel
 
+      # 4) Устанавливаем проект вместе с dev-зависимостями
       - name: Install dev dependencies
-        run: pip install --no-build-isolation -e .[dev]
+        run: pip install -e .[dev]
 
+      # 5) Запускаем тесты
       - name: Run tests
         run: pytest -q
 
+      # 6) Линтим код
       - name: Lint with flake8
-        run: python -m flake8
+        run: flake8
 
-  lint-and-security:
-    name: Lint & Security Checks
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Strip BOM from pyproject.toml (if any)
-        run: python strip_bom.py
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
-      - name: Install dev tools
-        run: pip install -e .[dev]
-
-      - name: Run flake8
-        run: python -m flake8
-
+      # 7) Сканируем на уязвимости
       - name: Security scan with bandit
-        run: python -m bandit -r .
-
+        run: bandit -r .
