--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -9,14 +10,14 @@ jobs:
     name: Build & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
 
-    # Перебираем нужные версии Python
     strategy:
       fail-fast: false
       matrix:
+        # Обратите внимание: не 3.1, а 3.10!
         python-version: [3.9, 3.10, 3.11]
 
     steps:
-      # 1) Клонируем репозиторий
+      # 1) Забираем код
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -26,11 +27,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # 3) Обновляем pip, setuptools и wheel
+      # 3) Обновляем pip, setuptools & wheel
       - name: Upgrade pip, setuptools & wheel
         run: python -m pip install --upgrade pip setuptools wheel
 
-      # 4) Устанавливаем проект вместе с dev-зависимостями
+      # 4) Устанавливаем проект вместе со всеми dev-зависимостями
       - name: Install dev dependencies
         run: pip install -e .[dev]
 
