--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,71 +1,41 @@
-name: CI
+# .github/workflows/ci.yml
+name: CI (build wheel)
 
-# Триггерим на push в main и на pull_request
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
-  build-and-test:
-    name: Build & Test on Python ${{ matrix.python-version }}
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
-
+        python: ["3.9", "3.10", "3.11"]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Strip BOM from pyproject.toml
+        run: python strip_bom.py
+
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
 
-      - name: Upgrade pip, setuptools & wheel
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
+      - name: Upgrade pip, setuptools, wheel
+        run: pip install --upgrade pip setuptools wheel
 
-      - name: Install dev dependencies
+      - name: Build wheel
+        run: python -m build --wheel --no-isolation .
+
+      - name: Install wheel + dev dependencies
         run: |
-          pip install .[dev]
+          pip install dist/*.whl
+          pip install pytest flake8 bandit
 
       - name: Run tests
-        run: |
-          pytest -q
+        run: pytest -q
 
       - name: Lint with flake8
-        run: |
-          flake8 .
-
-  lint-and-security:
-    name: Lint & Security Checks
-    runs-on: ubuntu-latest
-    needs: build-and-test
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
-
-      - name: Strip BOM from pyproject.toml (if any)
-        run: |
-          python tools/strip_bom.py
-
-      - name: Run flake8
-        run: |
-          flake8 .
+        run: flake8 .
 
       - name: Security scan with bandit
-        run: |
-          bandit -r src -n5
+        run: bandit -r src
