--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,33 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.9", "3.10", "3.11"]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+        python-version: [3.9, 3.10, 3.11, 3.13]
 
-      - name: Set up Python ${{ matrix.python }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
 
-      - name: Upgrade pip, setuptools, wheel
-        run: pip install --upgrade pip setuptools wheel
+      - name: Install build tools
+        run: python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install package + dev dependencies
-        run: |
-          pip install .[dev]
+      - name: Install editable + dev deps
+        run: pip install -e .[dev]
 
       - name: Run tests
         run: pytest -q
 
-      - name: Lint with flake8
-        run: flake8 .
-
-      - name: Security scan with bandit
-        run: bandit -r src
+      - name: Run linter
+        run: python -m flake8 .
