--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,52 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
   push:
     branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  test:
+  build-and-test:
+    name: Build & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11, 3.13]
+        python-version: [ '3.9', '3.10', '3.11' ]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: 📥 Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: 🔧 Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install build tools
-        run: python -m pip install --upgrade pip setuptools wheel
+      - name: 📦 Upgrade pip, setuptools & wheel
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install editable + dev deps
-        run: pip install -e .[dev]
+      - name: ⚙️ Install dev dependencies
+        run: |
+          # установка в editable-режиме, без отключения PEP 517
+          python -m pip install --upgrade build
+          python -m build --wheel --outdir dist .
+          python -m pip install dist/*.whl[dev]
 
-      - name: Run tests
-        run: pytest -q
+      - name: ✅ Run tests
+        run: |
+          python -m pytest --maxfail=1 --disable-warnings -q
 
-      - name: Run linter
-        run: python -m flake8 .
+      - name: 🐍 Lint with flake8
+        run: |
+          python -m pip install flake8
+          # явно пропускаем вспомогательный скрипт strip_bom.py
+          flake8 src --exclude strip_bom.py
+
+      - name: 🔒 Security scan with Bandit
+        run: |
+          python -m pip install bandit
+          bandit -r src --exclude strip_bom.py
