--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,52 +1,38 @@
-# .github/workflows/ci.yml
 name: CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   build-and-test:
-    name: Build & Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [ '3.9', '3.10', '3.11' ]
-
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: 🔧 Setup Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: 📦 Upgrade pip, setuptools & wheel
+      - name: Upgrade pip, setuptools, wheel
         run: |
           python -m pip install --upgrade pip setuptools wheel
 
-      - name: ⚙️ Install dev dependencies
+      - name: Install dev dependencies
         run: |
-          # установка в editable-режиме, без отключения PEP 517
-          python -m pip install --upgrade build
-          python -m build --wheel --outdir dist .
-          python -m pip install dist/*.whl[dev]
+          pip install .[dev] --no-build-isolation
 
-      - name: ✅ Run tests
+      - name: Run tests
         run: |
-          python -m pytest --maxfail=1 --disable-warnings -q
+          pytest -q --maxfail=1
 
-      - name: 🐍 Lint with flake8
+      - name: Lint with flake8
         run: |
-          python -m pip install flake8
-          # явно пропускаем вспомогательный скрипт strip_bom.py
-          flake8 src --exclude strip_bom.py
+          flake8 .
 
-      - name: 🔒 Security scan with Bandit
+      - name: Security scan with bandit
         run: |
-          python -m pip install bandit
-          bandit -r src --exclude strip_bom.py
+          bandit -r src
