--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-# pyproject.toml
-
 [project]
 name = "zilant-prime-core"
 version = "0.1.0"
@@ -36,8 +34,5 @@ dev = [
 ]
 
 [build-system]
-requires = [
-  "setuptools>=42",
-  "wheel",
-]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
