fix: full BOM/UTF-16 detector

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,13 +1,29 @@
+name: Build & Test
+
+on:
+  push:
+    branches:
+      - fix/ci-no-build-isolation
+  pull_request:
+    branches:
+      - fix/ci-no-build-isolation
+
+jobs:
+  build-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Detect BOM/UTF-16 signatures
         run: |
-          echo "┌── Начинаем строгую проверку файлов на BOM/UTF-16"
+          echo "┌── Строгая проверка файлов на BOM/UTF-16"
           
-          # Ищем все .py, .md и .toml файлы
+          # Проверяем все .py, .md и .toml файлы
           find . -type f \( -name '*.py' -o -name '*.md' -o -name '*.toml' \) | while read -r f; do
             # Считываем первые 3 байта
             sig=$(xxd -p -l 3 "$f" | tr '[:lower:]' '[:upper:]')
             
-            # Проверяем сигнатуру BOM
+            # Роняем весь workflow, если находим BOM
             if [[ "$sig" == "EFBBBF"* ]]; then
               echo "💥 BOM UTF-8   -> $f"
               exit 1
