fix: full pyproject.toml with correct license and dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "zilant-prime-core"
 version = "0.1.0"
 description = "Zilant Prime Core"
 authors = ["QuantumKeyUYU <email@example.com>"]
-license = {text = "MIT"}
+license = {text = "MIT License"}
 readme = "README.md"
 requires-python = ">=3.9"
 
@@ -11,9 +11,32 @@ requires-python = ">=3.9"
 Homepage = "https://github.com/QuantumKeyUYU/zilant-prime-core"
 Repository = "https://github.com/QuantumKeyUYU/zilant-prime-core"
 
+[project.dependencies]
+cryptography = "^41.0.0"
+numpy = "^1.25.0"
+scipy = "^1.11.0"
+
 [project.optional-dependencies]
-dev = ["pytest", "hypothesis", "black", "flake8", "mypy", "bandit"]
+dev = [
+    "pytest",
+    "hypothesis",
+    "black",
+    "flake8",
+    "mypy",
+    "bandit",
+    "wheel",
+    "setuptools"
+]
 
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+license-files = ["LICENSE", "LICENSE.txt"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.hatch.version]
+path = "src/zilant_prime_core/__init__.py"
